00_spreadsheet.css
/* ... */
    /* Les classes qui appelle les anims */

    .lm-scrllgngn__block_current .shine {
        border-radius: 100%;
        animation: scr-blurin 3.5s ease-in-out alternate infinite, scr-scalein 3s ease-in-out forwards;
        z-index: 2;
    }

    .lm-scrllgngn__block_inactive .shine,
    .lm-scrllgngn__block_previous .shine {
        animation: scr-scaleout 3s ease-in-out forwards;
    }

    .scr-02-02-arrow {
        transform: scale(0);
    }

    .scr-02-02-sun {
        position: absolute;
        top: 2vh;
        left: 20%;
    }

    .lm-scrllgngn__block_current .scr-02-02-arrow {
        animation: scr-scalein-arrow 1s ease-in-out forwards;
        animation-delay: 0.2s;
    }

    /* ETAPE 03 */
    /* 02-04 - Le draw circle de l'effet de serre */

    @keyframes draw {
        to {
            stroke-dashoffset: 0;
        }
    }

    .lm-scrllgngn__block_current .draw-circle {
        stroke-dasharray: 230;
        stroke-dashoffset: 230;
        animation: draw 1.5s ease-in-out forwards;
    }

    /* ETAPE 04 */
    /* ETAPE 05 */

    /* Le graphique 02-04-00 */

    .lm-scrllgngn__block_current .draw-line {
        stroke-dasharray: 960;
        stroke-dashoffset: 960;
        animation: draw 1.5s ease-in-out forwards;
    }

    /* Le graphique 02-04-04 */

    @keyframes draw-dash {
        to {
            stroke-dasharray: 4 4;
            stroke-dashoffset: 0;
        }
    }

    .lm-scrllgngn__block_current .draw-line-dash {
        stroke-dasharray: 20 4;
        stroke-dashoffset: 100;
        animation: draw-dash 1.5s ease-in-out forwards;
    }

    /* L'anim des chapitres */

    @keyframes scr-scalein-chapter {
        to {
            transform: scale(1.6) ;
        }
    }

    @keyframes scr-scalein-chapter-circle {
        to {
            transform: scale(1.07) ;
        }
    }

    /* <-----Fin des anims-----> */


    /* <-----LE LAYOUT-----> */
    /* les conteneurs */

    .scr-wrapper {
        min-height: 100vh;
        width: 100%;
    }

    .scr-wrapper-home {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 40px;
    }

    .scr-wrapper-intro {
        padding: 20vh;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
    }

    .scr-wrapper-chapter {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        transition: opacity 600ms;
    }

    .lm-scrllgngn__page_above .scr-wrapper-chapter {
        opacity: 0;
    }

    .scr-wrapper-chapter-intro {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .scr-wrapper-card {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        padding-bottom: 20vh;
    }

    .scr-wrapper-card-left {
        width: 50vw;
    }

    /* les styles de texte */

    .scr-title {
        font-family: var(--ff-marr-sans);
        font-weight: 600;
        line-height: 1;
        font-size: 70px;
        text-transform: uppercase;
        color: white;
        max-width: 760px;
        text-align: center;
        text-shadow: 0px 3px 30px rgba(0, 0, 0, 1);
    }

    .scr-chapo {
        font-family: var(--ff-the-antiqua-b);
        color: white;
        font-weight: 500;
        font-size: 22px;
        line-height: 1.5;
        max-width: 600px;
    }

    .scr-intro {
        font-family: var(--ff-the-antiqua-b);
        color: white;
        font-weight: 500;
        font-size: 22px;
        line-height: 1.5;
        text-align: left;
        max-width: 600px;
        width: 100%;
        text-shadow: 0px 3px 10px rgba(0, 0, 0, 1), 0px 0px 20px rgba(0, 0, 0, 1);
    }

    .scr-chapter-title {
        font-family: var(--ff-marr-sans);
        font-weight: 400;
        text-align: center;
        line-height: 1;
        font-size: 66px;
        color: white;
        max-width: 680px;
    }

    .scr-chapter-title-dark {
        color: #2A303C;
    }

    .scr-chapter-intro-dark {
        font-family: var(--ff-the-antiqua-b);
        color: white;
        font-weight: 500;
        font-size: 26px;
        text-align: center;
        line-height: 1.4;
        max-width: 620px;
        text-shadow: 0px 3px 10px rgba(0, 0, 0, 1), 0px 0px 20px rgba(0, 0, 0, 1);
    }

    .scr-label {
        font-family: var(--ff-marr-sans);
        color: white;
        font-weight: 500;
        font-size: 16px;
        line-height: 26px;
        text-transform: uppercase;
        text-align: center;
    }

    .scr-label-dark {
        color: #2A303C;
    }

    .scr-plain-text-dark {
        font-family: var(--ff-the-antiqua-b);
        color: rgba(255, 255, 255, 0.85);
        font-weight: 500;
        font-size: 23px;
        line-height: 1.35;
        letter-spacing: -0.02em;
        max-width: 600px;
    }

    .scr-plain-text-dark strong {
        color: #d95e4e;
    }

    .scr-plain-text-light {
        font-family: var(--ff-the-antiqua-b);
        color: rgba(42, 48, 60, 0.85);
        font-weight: 500;
        font-size: 23px;
        line-height: 1.35;
        letter-spacing: -0.02em;
        max-width: 600px;
    }

    .scr-plain-text-light strong {
        color: #CC1800;
    }

    .scr-focus-text {
        color: var(--color, white);
        background: var(--bg-color, black);
        padding: 0 5px 0 5px;
        border-radius: 1px;
    }
/* ... */

